# mcp-duckduckgo

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST.in  Makefile  PR_CODE_IMPROVEMENTS.md  README.md  mypy.ini  pyproject.toml  test_real_search.py  test_tools.py
mcp_duckduckgo/: __init__.py  main.py  models.py  prompts.py  resources.py  search.py  search_new.py  server.py  tools.py  tools_fixed.py  tools_working.py
scripts/: install_dev.sh  lint.sh  publish.sh  run.sh  run_single_test.sh  run_tests.sh  test.sh  vulture.sh
tests/: __init__.py  conftest.py  test_integration.py  test_main.py  test_real_search.py  test_search.py  test_tools.py
