[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_duckduckgo"
version = "0.1.1"
description = "DuckDuckGo search plugin for Model Context Protocol"
authors = [
    {name = "Gianluca Mazza", email = "info@gianlucamazza.it"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["mcp", "duckduckgo", "search", "claude", "anthropic", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "mcp>=1.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "mypy>=1.6.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "httpx>=0.25.0"
]
dev = [
    "pip>=23.2.1",
    "build>=1.0.3",
    "twine>=4.0.2",
]

[project.urls]
Homepage = "https://github.com/gianlucamazza/mcp-duckduckgo"
Repository = "https://github.com/gianlucamazza/mcp-duckduckgo"
"Bug Tracker" = "https://github.com/gianlucamazza/mcp-duckduckgo/issues"
Documentation = "https://github.com/gianlucamazza/mcp-duckduckgo#readme"

[project.scripts]
mcp-duckduckgo = "mcp_duckduckgo.main:main"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
